# P1-Video-SEO-Engine-Enterprise

./: .env.example  .gitattributes  .gitignore  .promptfooignore  HANDOFF.md  Makefile  PORTFOLIO.md  README.md  docker-compose.yml  promptfoo.yaml  pyproject.toml
.github/workflows/: README.md  cd.yaml  ci.yaml  eval-nightly.yaml  model-drift.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/src/anime_rag/: __init__.py  main.py
apps/api/src/anime_rag/cache/: __init__.py  service.py
apps/api/src/anime_rag/core/: cost_control.py  guardrails.py  logging.py  metrics.py  pii.py  security.py  settings.py  telemetry.py
apps/api/src/anime_rag/db/: audit.py  pool.py
apps/api/src/anime_rag/rag/: pipeline.py  state.py  utils.py
apps/api/src/anime_rag/rag/nodes/: cache_check.py  cache_write.py  generator.py  grader.py  retriever.py  rewriter.py
apps/api/src/anime_rag/rag/retrieval/: __init__.py  bm25.py  dense.py  reranker.py  rrf.py
apps/api/src/anime_rag/routers/: cost.py  health.py  recommend.py
apps/api/src/anime_rag/schemas/: recommend.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_cache_service.py  test_citations.py  test_cost_control.py  test_guardrails.py  test_health.py  test_pii.py  test_rrf.py  test_schemas.py  test_settings.py
apps/web/: .dockerignore  Dockerfile  next.config.ts  package.json  tailwind.config.ts
docs/: README.md  clerk_setup.md
docs/runbooks/: budget-exhausted.md  embedding-drift.md  high-latency.md  node-failure.md  ragas-regression.md
infra/argocd/: app-of-apps.yaml
infra/helm/: README.md
infra/monitoring/: prometheus.yml
infra/pgbouncer/: pgbouncer.ini  (+1 more)
scripts/: ingest.py  init_db.sql
(+80 files in other folders)
