[project]
name = "anime-rag-api"
version = "0.1.0"
description = "Production-grade RAG API for anime recommendations"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "litellm>=1.40.0",

    # Vector DB
    "pgvector>=0.3.0",
    "psycopg[binary,pool]>=3.1.0",
    "alembic>=1.13.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Cohere reranker
    "cohere>=5.5.0",

    # Observability
    "langfuse>=2.35.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",

    # Security
    "slowapi>=0.1.9",
    "limits[redis]>=3.6.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "guardrails-ai>=0.5.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Misc
    "pandas>=2.2.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_rag"]
